Tái cấu trúc auth => identity