@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.4.3'
     id 'io.spring.dependency-management' version '1.1.7'
+    id 'com.google.protobuf' version '0.9.4'
 }
 
 group = 'com.chatbot'
@@ -11,16 +12,6 @@ java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
     }
-}
-
-bootRun {
-    jvmArgs = [
-        "-Duser.timezone=Asia/Ho_Chi_Minh",
-        "-Xms256m",
-        "-Xmx512m", 
-        "-XX:MaxMetaspaceSize=256m",
-        "-XX:+UseG1GC"
-    ]
 }
 
 repositories {
@@ -38,9 +29,19 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis' // Redis starter (Lettuce included)
     implementation 'org.springframework.boot:spring-boot-starter-websocket'  // WebSocket
-    
-    // H2 Database (for local testing)
-    runtimeOnly 'com.h2database:h2'
+
+    // -------------------------------
+    // gRPC
+    // -------------------------------
+    implementation 'io.grpc:grpc-netty-shaded:1.58.0'
+    implementation 'io.grpc:grpc-protobuf:1.58.0'
+    implementation 'io.grpc:grpc-stub:1.58.0'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+
+    // -------------------------------
+    // Protocol Buffers
+    // -------------------------------
+    implementation 'com.google.protobuf:protobuf-java:3.24.4'
 
     // -------------------------------
     // Database
@@ -124,8 +125,32 @@ tasks.withType(JavaExec).configureEach {
     jvmArgs += "--enable-preview"
 }
 
-tasks.named("bootRun") {
-    doFirst {
-        jvmArgs += "--enable-preview"
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:3.24.4"
+    }
+    plugins {
+        grpc {
+            artifact = 'io.grpc:protoc-gen-grpc-java:1.58.0'
+        }
+    }
+    generateProtoTasks {
+        all().each { task ->
+            task.plugins {
+                grpc {}
+            }
+            task.builtins {
+                java {}
+            }
+        }
+    }
+}
+
+sourceSets {
+    main {
+        java {
+            srcDirs 'build/generated/source/proto/main/grpc'
+            srcDirs 'build/generated/source/proto/main/java'
+        }
     }
 }
